# tsunami_lab

./: .gitignore  .gitmodules  .readthedocs.yaml  .sconsign.dblite  CMakeLists.txt  Doxyfile  LICENSE  README.md  README.rst  SConstruct  TODO.txt  cppcheck_suppress.txt
.github/workflows/: docs.yml  main.yml
TsunamiEvent1d/: Csv.cpp  Csv.h  Csv.test.cpp  TsunamiEvent1d.h
csv_dump/: solution_0.csv
cutGrid/: Geco.nc
data/: Stations.json  output-gitter.nc  real.csv  test.json
data/artificialtsunami/: artificialtsunami_bathymetry_1000.nc  artificialtsunami_displ_1000.nc
docs/: Doxyfile
docs/ProjectReports/: submission_29_10_23_kroehl_halank_dressler.tar.xz
docs/UserDoc/: 1_RiemannSolver.rst  2_FiniteVolumeDiscretization.rst  3_BathymetryBoundaryConditions.rst  Doxyfile  conf.py  doxygen.rst  index.rst  requirements.txt
docs/html/: CatchOCTestCase_8h_source.html  Csv_8h_source.html  DamBreak1d_8h_source.html  Roe_8h_source.html  Setup_8h_source.html  TestObj_8h_source.html  WavePropagation1d_8h_source.html  WavePropagation_8h_source.html  annotated.html  build_2src_2constants_8h_source.html  build_2src_2io_2Csv_8h_source.html  build_2src_2patches_2WavePropagation1d_8h_source.html  build_2src_2patches_2WavePropagation_8h_source.html  build_2src_2setups_2DamBreak1d_8h_source.html  build_2src_2setups_2Setup_8h_source.html  build_2src_2solvers_2Roe_8h_source.html  catch__analyse_8hpp_source.html  catch__approx_8h_source.html  catch__assertionhandler_8h_source.html  catch__assertioninfo_8h_source.html  catch__assertionresult_8h_source.html  catch__benchmark_8hpp_source.html  catch__benchmark__function_8hpp_source.html  catch__benchmarking__all_8hpp_source.html  catch__capture_8hpp_source.html  catch__capture__matchers_8h_source.html  catch__chronometer_8hpp_source.html  catch__clara_8h_source.html  catch__clock_8hpp_source.html  catch__commandline_8h_source.html  catch__common_8h_source.html  catch__compiler__capabilities_8h_source.html  catch__complete__invoke_8hpp_source.html  catch__config_8hpp_source.html  catch__config__uncaught__exceptions_8hpp.html  catch__config__uncaught__exceptions_8hpp__incl.map  catch__config__uncaught__exceptions_8hpp__incl.md5  catch__config__uncaught__exceptions_8hpp_source.html  catch__console__colour_8h_source.html  catch__constructor_8hpp_source.html  (+1542 more)
docs/latex/: annotated.tex  catch__config__uncaught__exceptions_8hpp.tex  catch__config__uncaught__exceptions_8hpp__incl.md5  catch__fatal__condition_8cpp.tex  catch__fatal__condition_8cpp__incl.md5  classCatch_1_1AssertionHandler.tex  classCatch_1_1AssertionResult.tex  classCatch_1_1AssertionResult__coll__graph.md5  classCatch_1_1BinaryExpr.tex  classCatch_1_1BinaryExpr__coll__graph.md5  classCatch_1_1Capturer.tex  classCatch_1_1Config.tex  classCatch_1_1Config__coll__graph.md5  classCatch_1_1Context.tex  classCatch_1_1Context__coll__graph.md5  classCatch_1_1Detail_1_1Approx.tex  classCatch_1_1Detail_1_1EnumValuesRegistry.tex  classCatch_1_1Detail_1_1EnumValuesRegistry__coll__graph.md5  classCatch_1_1Detail_1_1IsStreamInsertable.tex  classCatch_1_1ErrnoGuard.tex  classCatch_1_1ExceptionTranslatorRegistrar.tex  classCatch_1_1ExceptionTranslatorRegistry.tex  classCatch_1_1ExceptionTranslatorRegistry__coll__graph.md5  classCatch_1_1ExprLhs.tex  classCatch_1_1FatalConditionHandler.tex  classCatch_1_1FatalConditionHandlerGuard.tex  classCatch_1_1GeneratorException.tex  classCatch_1_1GeneratorException__coll__graph.md5  classCatch_1_1Generators_1_1ChunkGenerator.tex  classCatch_1_1Generators_1_1ChunkGenerator__coll__graph.md5  classCatch_1_1Generators_1_1FilterGenerator.tex  classCatch_1_1Generators_1_1FilterGenerator__inherit__graph.md5  classCatch_1_1Generators_1_1FixedValuesGenerator.tex  classCatch_1_1Generators_1_1FixedValuesGenerator__coll__graph.md5  classCatch_1_1Generators_1_1GeneratorUntypedBase.tex  classCatch_1_1Generators_1_1GeneratorUntypedBase__inherit__graph.md5  classCatch_1_1Generators_1_1GeneratorWrapper.tex  classCatch_1_1Generators_1_1Generators.tex  classCatch_1_1Generators_1_1Generators__inherit__graph.md5  classCatch_1_1Generators_1_1IteratorGenerator.tex  (+590 more)
docs/source/: api.rst  conf.py
docs_doxygen/: Doxyfile.in
docs_sphinx/: Doxyfile.in  conf.py  index.rst  requierements.txt
docs_sphinx/api/: TsunamiSimulation.rst  index.rst  tsunami_lab.rst
docs_sphinx/getting_started/: building_project.rst  test.rst
documentation/source/: conf.py  index.rst
html/: graph_legend.html  index.html
include/: TsunamiSimulation.h  constants.h
include/patches/: WavePropagation.h  WavePropagation1d.h
latex/: refman.tex
res/: dummy_bathymetry.nc  dummy_disp.nc  dummy_middle_states.csv
res/color_maps/: bathymetry.xml
res/configs/: artificial_tsunami_event_2d.json  chile_100000m.json  chile_10000m.json  chile_1000m.json  chile_250m.json  chile_500m.json  coarse_chile_1000m.json  dam_break_1d.json  dam_break_2d.json  demo_config.json  dummy.json  rare_rare_1d.json  shock_shock_1d.json  small_dam_break_1d.json  small_dam_break_2d.json  subcritical_flow_1d.json  supercritical_flow_1d.json  test_boundaries.json  tohoku_1000m.json  tohoku_250m.json  tohoku_500m.json  tsunami_config.json  tsunami_event_2d.json
solutions/: solution_1.csv  solution_13.csv  solution_15.csv  solution_22.csv  solution_24.csv  solution_30.csv  solution_38.csv  solution_4.csv  solution_48.csv  solution_51.csv  solution_57.csv  solution_58.csv  solution_61.csv  solution_65.csv  solution_68.csv  solution_69.csv  solution_70.csv  solution_73.csv  solution_74.csv  solution_75.csv  solution_76.csv  solution_77.csv  solution_82.csv  solution_89.csv  solution_90.csv  solution_94.csv  solution_97.csv
src/: SConscript  TsunamiSimulation.cpp  constants.h  main.cpp  tests.cpp
src/configs/: SimConfig.cpp  SimConfig.h  SimConfig.test.cpp
src/data/: data.csv  test.csv
src/io/: Csv.cpp  Csv.h  Csv.test.cpp
src/patches/: WavePropagation.h  WavePropagation1d.cpp  WavePropagation1d.h  WavePropagation1d.test.cpp
src/setups/: CustomSetup1d.cpp  CustomSetup1d.h  CustomSetup1d.test.cpp  DamBreak1d.cpp  Setup.h  (+10 more)
(+539 files in other folders)
